--- a/ENTREGABLE-4.html
+++ b/ENTREGABLE-4.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-40">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-40">
 
     
 
@@ -361,7 +361,7 @@
     
     <div class="container content-slider">
         <div class="content-slider-wrap">
-            <div><div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="false" data-interval="false"><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/valoracin-1726x909.png);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/valoracin-1726x909.png"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/0002-1-2000x2588.jpeg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/0002-1-2000x2588.jpeg"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider2-5u"><span aria-hidden="true" class="mbri-left mbr-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider2-5u"><span aria-hidden="true" class="mbri-right mbr-iconfont"></span><span class="sr-only">Next</span></a></div></div> 
+            <div><div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="false" data-interval="false"><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/0001-1-2000x2588.jpeg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/0001-1-2000x2588.jpeg"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/0002-1-2000x2588.jpeg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/0002-1-2000x2588.jpeg"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider2-5u"><span aria-hidden="true" class="mbri-left mbr-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider2-5u"><span aria-hidden="true" class="mbri-right mbr-iconfont"></span><span class="sr-only">Next</span></a></div></div> 
         </div>
     </div>
 </section>
@@ -376,11 +376,11 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7"><strong><br></strong><br><strong>PROPUESTAS GANADORAS:</strong><br><em>Estrategia 1&nbsp;<br>Estrategia 3</em></p>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7"><strong><br></strong><br><strong>PROPUESTAS GANADORAS:</strong><br><em>Estrategia 2&nbsp;<br>Estrategia 3</em></p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 55%;">
-                     <img src="assets/images/winner-436x436.jpg" alt="Mobirise" title="">  
+                     <img src="assets/images/winner-406x406.jpg" alt="Mobirise" title="">  
                     </div>
                 </div>
             </div>
