--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -386,12 +386,10 @@
                         <img src="assets/images/background1.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">NO DISPONIBLE</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            NO DISPONIBLE
-                        </p>
+                        <h4 class="card-title mbr-fonts-style display-7">ENTREGABLE 9</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Diseño del módulo principal y secundario.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="ENTREGABLE-9.html" class="btn btn-primary display-4">
                             Leer más</a></div>
                 </div>
             </div>
