--- a/ENTREGABLE-10.html
+++ b/ENTREGABLE-10.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-7q">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-7q">
 
     
 
@@ -217,7 +217,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     BOCETOS INDIVUALES DE LOS COMPONENTES</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Fuente: Tinkercad-Erick Pari</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Fuente: Tinkercad-Elaboración propia</h3>
                 
             </div>
         </div>
