--- a/ENTREGABLE-7.html
+++ b/ENTREGABLE-7.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-6c">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-6c">
 
     
 
